Implement changed class and attribute names
Replace css class names:
* left-* => start-*
* right-* => end-*
* *-left => *-start
* *-right => *-end
* ml-* => ms-*
* mr-* => me-*
* pl-* => ps-*
* pr-* => pe-*
* form-group => mb-3
* form-row => row
* font-weight-* => fw-*
* font-style-* => fst-*
* no-gutters => g-0
* embed-responsive => ratio
* embed-responsive-16by9 => ratio-16x9
* badge-primary => bg-primary
* rounded-lg & rounded-sm => rounded-1, rounded-2, rounded-3
* btn-block => d-block w-100
* ustom-check => form-check
* custom-switch => from-switch
* custom-select => form-select
* custom-range => form-range
* custom-control custom-checkbox => form-check
* custom-control custom-radio => form-check
* custom-control-inline => form-check-inline
* custom-control-input => form-check-input
* custom-control-label => form-check-label
* close => btn-close

Data attributes:
* data-dismiss => data-bs-dismiss
* data-ride => data-bs-ride
* data-interval => data-bs-interval
* data-slide => data-bs-slide
* data-target => data-bs-target
* data-toggle => data-bs-toggle

Removed:
* .input-group-append
* .input-group-prepend

Other:
* <select> elements require class="form-select"
* Close buttons: Find &times and remove parent span
* CSS variables: var(--  =>  var(--bs-
* sr-only => visually-hidden
* Navbars now require a container within

--- a/League.Demo/Views/Home/AboutLeague.cshtml
+++ b/League.Demo/Views/Home/AboutLeague.cshtml
@@ -10,12 +10,12 @@
 <div class="mb-0 pb-1">
     <div class="row">
         <article class="col-md-8">
-            <p class="font-weight-bolder text-primary">The Volleyball League Platform brings everything necessary to organize and to run a league.</p>
+            <p class="fw-bolder text-primary">The Volleyball League Platform brings everything necessary to organize and to run a league.</p>
         </article>
     </div>
     <div class="row">
         <article class="col-10 col-sm-8">
-            <h3 class="h3 pl-2 rounded">Features</h3>
+            <h3 class="h3 ps-2 rounded">Features</h3>
             <ul class="fa-ul">
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Indoor and beach leagues</li>
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Registration of teams</li>
@@ -30,12 +30,12 @@
             </ul>
         </article>
         <article class="col-2 col-sm-4">
-            <img class="img-fluid rounded text-right" src="/images/logo-volleyball-league.svg" alt="League">
+            <img class="img-fluid rounded text-end" src="/images/logo-volleyball-league.svg" alt="League">
         </article>
     </div>
     <div class="row">
         <article class="col-8 col-sm-8">
-            <h3 class="h3 pl-2 rounded">Software</h3>
+            <h3 class="h3 ps-2 rounded">Software</h3>
             <ul class="fa-ul">
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Individual settings (e.g. number of records, number of rounds, etc.)</li>
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Individual pages, e.g. for the game rules</li>
@@ -46,12 +46,12 @@
             </ul>
         </article>
         <article class="col-4 col-sm-4">
-            <img class="img-fluid rounded text-right" src="/images/software.png" alt="League">
+            <img class="img-fluid rounded text-end" src="/images/software.png" alt="League">
         </article>
     </div>
     <div class="row mb-4">
         <article class="col-8">
-            <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.GeneralContact" class="link font-weight-bolder">Contact us</a> to run a league on this platform.</div>
+            <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.GeneralContact" class="link fw-bolder">Contact us</a> to run a league on this platform.</div>
         </article>
     </div>
     <div class="row">
