--- a/League.Demo/Views/Home/AboutLeague.de.cshtml
+++ b/League.Demo/Views/Home/AboutLeague.de.cshtml
@@ -12,12 +12,12 @@
 <div class="mb-0 pb-1">
     <div class="row">
         <article class="col-md-8">
-            <p class="font-weight-bolder text-primary">Die Volleyball-Liga Plattform bringt alles Notwendige mit, um eine Liga zu organisieren und den Spielbetrieb durchzuführen.</p>
+            <p class="fw-bolder text-primary">Die Volleyball-Liga Plattform bringt alles Notwendige mit, um eine Liga zu organisieren und den Spielbetrieb durchzuführen.</p>
         </article>
     </div>
     <div class="row">
         <article class="col-10 col-sm-8">
-            <h3 class="h3 pl-2 rounded">Features</h3>
+            <h3 class="h3 ps-2 rounded">Features</h3>
             <ul class="fa-ul">
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Hallen- und Beach-Ligen</li>
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Anmeldung von Teams</li>
@@ -32,12 +32,12 @@
             </ul>
         </article>
         <article class="col-2 col-sm-4">
-            <img class="img-fluid rounded text-right" src="/images/logo-volleyball-league.svg" alt="League">
+            <img class="img-fluid rounded text-end" src="/images/logo-volleyball-league.svg" alt="League">
         </article>
     </div>
     <div class="row">
         <article class="col-10 col-sm-8">
-            <h3 class="h3 pl-2 rounded">Software</h3>
+            <h3 class="h3 ps-2 rounded">Software</h3>
             <ul class="fa-ul">
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Individuelle Einstellungen (z.B. Anzahl der Sätze, Anzahl der Runden u.v.m.)</li>
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Individuelle Seiten, z.B. für die Spielordnung</li>
@@ -48,12 +48,12 @@
             </ul>
         </article>
         <article class="col-2 col-sm-4">
-            <img class="img-fluid rounded text-right" src="/images/software.png" alt="League">
+            <img class="img-fluid rounded text-end" src="/images/software.png" alt="League">
         </article>
     </div>
     <div class="row mb-4">
         <article class="col-8">
-            <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.GeneralContact" class="link font-weight-bolder">Kontaktiere uns</a> um eine Liga mit dieser Plattform zu organisieren.</div>
+            <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.GeneralContact" class="link fw-bolder">Kontaktiere uns</a> um eine Liga mit dieser Plattform zu organisieren.</div>
         </article>
     </div>
     <div class="row">
