--- a/League/Views/Account/PleaseConfirmEmail.cshtml
+++ b/League/Views/Account/PleaseConfirmEmail.cshtml
@@ -15,7 +15,7 @@
         @Localizer["to complete the registration"]
     </site-alert>
     <site-alert type="Success" icon="fas fa-lightbulb fa-2x">
-        <ul class="mb-0 pl-4">
+        <ul class="mb-0 ps-4">
             <li>
                 <b>@ViewData["Title"]</b>
                 @Localizer["until"]
