--- a/League/Views/Account/ResetPassword.cshtml
+++ b/League/Views/Account/ResetPassword.cshtml
@@ -11,26 +11,26 @@
 <div>
     <h2 class="h2">@ViewData["Title"]</h2>
     <hr />
-    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ResetPassword)" asp-route-tenant="@tenantUrlSegment" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
+    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ResetPassword)" asp-route-tenant="@tenantUrlSegment" method="post" class="col-md-8 col-sm-10 col-12 ps-0" role="form">
         <site-validation-summary show="All">
             <b>@Localizer["Input has some issues"]:</b>
         </site-validation-summary>
         <input asp-for="Code" type="hidden" />
-        <div class="form-group">
-            <label asp-for="EmailOrUsername"></label>
+        <div class="mb-3">
+            <label asp-for="EmailOrUsername" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="EmailOrUsername" class="form-control" required="required" type="text" />
-                <span class="input-group-append input-group-text">
+                <span class="input-group-text">
                     <i class="fas fa-user"></i>
                 </span>
             </div>
             <span asp-validation-for="EmailOrUsername" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="Password"></label>
+        <div class="mb-3">
+            <label asp-for="Password" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="Password" class="form-control" required="required" type="text" aria-describedby="passwordHelpBlock" />
-                <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
                     <i class="fas fa-eye"></i>
                 </span>
             </div>
@@ -39,17 +39,17 @@
                 <partial name="_passwordRules" />
             </small>
         </div>
-        <div class="form-group">
-            <label asp-for="ConfirmPassword"></label>
+        <div class="mb-3">
+            <label asp-for="ConfirmPassword" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="ConfirmPassword" required="required" type="text" class="form-control" />
-                <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
                     <i class="fas fa-eye"></i>
                 </span>
             </div>
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
-        <div class="form-group">
+        <div class="mb-3">
             <button type="submit" class="btn btn-lg btn-primary col-md-8 col-sm-10 col-12">@Localizer["Save new password"]</button>
         </div>
     </form>
