--- a/League/Views/Manage/_ChangePasswordModalPartial.cshtml
+++ b/League/Views/Manage/_ChangePasswordModalPartial.cshtml
@@ -11,21 +11,21 @@
         <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangePassword)" asp-route-tenant="@tenantUrlSegment" method="post" role="form">
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
-            <div class="form-group">
-                <label asp-for="CurrentPassword"></label>
+            <div class="mb-3">
+                <label asp-for="CurrentPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="CurrentPassword" autofocus class="form-control" />
-                    <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
                         <i class="fas fa-eye"></i>
                     </span>
                 </div>
                 <span asp-validation-for="CurrentPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="NewPassword"></label>
+            <div class="mb-3">
+                <label asp-for="NewPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="NewPassword" class="form-control" />
-                    <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
                         <i class="fas fa-eye"></i>
                     </span>
                 </div>
@@ -34,11 +34,11 @@
                 </small>
                 <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
+            <div class="mb-3">
+                <label asp-for="ConfirmPassword" class="form-label"></label>
                 <div class="input-group">
                     <input asp-for="ConfirmPassword" class="form-control" />
-                    <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                    <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
                         <i class="fas fa-eye"></i>
                     </span>
                 </div>
