--- a/League/Views/Manage/_ManageLoginsModalPartial.cshtml
+++ b/League/Views/Manage/_ManageLoginsModalPartial.cshtml
@@ -15,7 +15,7 @@
                 <hr />
                 for (var index = 0; index < Model.CurrentLogins.Count; index++)
                 {
-                    <div class="row no-gutters mb-2">
+                    <div class="row g-0 mb-2">
                         <div class="col-sm-5">@Model.CurrentLogins[index].ProviderDisplayName</div>
                         <div class="col-sm-7 text-wrap">
                             @if (Model.ShowRemoveButton)
