--- a/League/Views/Manage/_SetPasswordModalPartial.cshtml
+++ b/League/Views/Manage/_SetPasswordModalPartial.cshtml
@@ -19,16 +19,16 @@
                 @Localizer["You do not have a local password for this site. Add a local password so you can sign in without an external login."]
             </p>
             <site-validation-summary show="All"></site-validation-summary>
-            <div class="form-group">
-                <label asp-for="NewPassword"></label>
+            <div class="mb-3">
+                <label asp-for="NewPassword" class="form-label"></label>
                 <input asp-for="NewPassword" autofocus class="form-control" aria-describedby="passwordHelpBlock" />
                 <small id="passwordHelpBlock" class="form-text text-muted">
                     <partial name="_passwordRules" />
                 </small>
                 <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
+            <div class="mb-3">
+                <label asp-for="ConfirmPassword" class="form-label"></label>
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
