--- a/League/Views/Ranking/AllTimeForTeam.cshtml
+++ b/League/Views/Ranking/AllTimeForTeam.cshtml
@@ -30,7 +30,7 @@
         @{
             if (!string.IsNullOrWhiteSpace(selectedTeam.ClubName))
             {
-                <span class="ml-3 text-muted">(@selectedTeam.ClubName)</span>
+                <span class="ms-3 text-muted">(@selectedTeam.ClubName)</span>
             }
         }
         <div>@Localizer["Click on a tournament name to show the all time list of it"]</div>
