--- a/League.Demo/Views/Shared/_Layout.cshtml
+++ b/League.Demo/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             <div class="my-auto order-2 order-md-1">
                 <h1 class="h4 header-organization">@(TenantContext.OrganizationContext.Name)</h1>
             </div>
-            <div class="my-auto order-1 order-md-2 text-md-right header-logo">
+            <div class="my-auto order-1 order-md-2 text-md-end header-logo">
                 <a class="d-block" href="@Url.Action(nameof(Home.Welcome), nameof(Home))" style="text-decoration: none">
                     <span class="d-inline-block part1">volleyball league</span>
                     <span class="d-inline-block part2">demo</span>
@@ -44,7 +44,7 @@
             </div>
         </div>
     </header>
-    <nav id="nav-main" class="navbar navbar-expand-md navbar-dark rounded pl-2 site-sticky-top">
+    <nav id="nav-main" class="navbar navbar-expand-md navbar-dark rounded ps-2 site-sticky-top">
         @* bootstrap class "sticky-top" interferes with modal, that's why we use our identical "site-sticky-top" *@
         <div class="container-fluid">
             @* <a class="navbar-brand" href="#">axuno</a>*@
@@ -65,16 +65,16 @@
                 @{
                     if (TenantContext.IsDefault)
                     {
-                        <a asp-route="@RouteNames.GeneralContact" class="d-inline-block mr-4">@Localizer["Contact"]</a>
+                        <a asp-route="@RouteNames.GeneralContact" class="d-inline-block me-4">@Localizer["Contact"]</a>
                     }
                     else
                     {
-                        <a asp-route="@RouteNames.TenantContact" asp-route-tenant="@TenantContext.SiteContext.UrlSegmentValue" class="d-inline-block mr-4">@Localizer["Contact"]</a>
+                        <a asp-route="@RouteNames.TenantContact" asp-route-tenant="@TenantContext.SiteContext.UrlSegmentValue" class="d-inline-block me-4">@Localizer["Contact"]</a>
                     }
                 }
-                <a asp-action="@nameof(Home.LegalDisclosure)" asp-controller="@nameof(Home)" class="d-inline-block mr-4">@Localizer["Legal Disclosure"]</a>
-                <a asp-action="@nameof(Home.Privacy)" asp-controller="@nameof(Home)" class="d-inline-block mr-4">@Localizer["Privacy"]</a>
-                <a asp-action="@nameof(Home.PictureCredits)" asp-controller="@nameof(Home)" class="d-inline-block mr-4">@Localizer["Picture Credits"]</a>
+                <a asp-action="@nameof(Home.LegalDisclosure)" asp-controller="@nameof(Home)" class="d-inline-block me-4">@Localizer["Legal Disclosure"]</a>
+                <a asp-action="@nameof(Home.Privacy)" asp-controller="@nameof(Home)" class="d-inline-block me-4">@Localizer["Privacy"]</a>
+                <a asp-action="@nameof(Home.PictureCredits)" asp-controller="@nameof(Home)" class="d-inline-block me-4">@Localizer["Picture Credits"]</a>
             </div>
         </div>
     </footer>
