--- a/League/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/League/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
             <div class="my-auto order-2 order-md-1">
                 <h1 class="h4 header-organization">@(TenantContext.IsDefault ? "Volleyball League" : TenantContext.OrganizationContext.Name)</h1>
             </div>
-            <div class="my-auto order-1 order-md-2 text-md-right header-logo">
+            <div class="my-auto order-1 order-md-2 text-md-end header-logo">
                 <a class="d-block" href="/" style="text-decoration: none">
                     <span class="d-inline-block part1">volleyball-liga</span>
                     <span class="d-inline-block part2">.de</span>
@@ -42,7 +42,7 @@
             </div>
         </div>
     </header>
-    <nav id="nav-main" class="navbar navbar-expand-md navbar-dark rounded pl-2 site-sticky-top">
+    <nav id="nav-main" class="navbar navbar-expand-md navbar-dark rounded ps-2 site-sticky-top">
         @* bootstrap 4 class "sticky-top" interferes with modal, that's why we use our identical "site-sticky-top" *@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
