--- a/League/Views/Account/ConfirmEmailError.cshtml
+++ b/League/Views/Account/ConfirmEmailError.cshtml
@@ -11,7 +11,7 @@
 <div>
     <site-alert type="Warning">
         @Localizer["Sorry, your email could not be confirmed. Possible causes"]:<br />
-        <ul class="mb-0 pl-4">
+        <ul class="mb-0 ps-4">
             <li>@Localizer["The link has expired"]</li>
             <li>@Localizer["The link is not exactly as written in the email"]</li>
         </ul>
