--- a/League/Views/Account/ForgotPassword.cshtml
+++ b/League/Views/Account/ForgotPassword.cshtml
@@ -10,24 +10,24 @@
 }
 <h2 class="h2">@(ViewData["Title"])</h2>
 <hr />
-<form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ForgotPassword)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
+<form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ForgotPassword)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="col-md-8 col-sm-10 col-12 ps-0" role="form">
     <p>
         @(Localizer["Please enter the primary email address or the username of your account. We will send and email with a code to reset the password to this email address."])
     </p>
     <site-validation-summary show="All">
         <b>@Localizer["Input has some issues"]:</b>
     </site-validation-summary>
-    <div class="form-group">
-        <label asp-for="EmailOrUsername"></label>
+    <div class="mb-3">
+        <label asp-for="EmailOrUsername" class="form-label"></label>
         <div class="input-group">
             <input asp-for="EmailOrUsername" class="form-control" required="required" type="text" />
-            <span class="input-group-append input-group-text">
+            <span class="input-group-text">
                 <i class="fas fa-user"></i>
             </span>
         </div>
         <span asp-validation-for="EmailOrUsername" class="text-danger"></span>
     </div>
-    <div class="form-group">
+    <div class="mb-3">
         <button type="submit" class="btn btn-lg btn-primary col-10">@Localizer["Submit"]</button>
     </div>
 </form>
