--- a/League/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/League/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -7,7 +7,7 @@
 <hr/>
 <div>
     <site-alert type="Success">
-        <ul class="mb-0 pl-4">
+        <ul class="mb-0 ps-4">
             <li>
                 @Localizer["The email with the code to reset the password has been sent, if the email address or username is connected to your account"].
             </li>
