--- a/League/Views/Contact/Index.cshtml
+++ b/League/Views/Contact/Index.cshtml
@@ -22,46 +22,46 @@
 </div>
 <div>
     @* Create the action url using the same named route as when invoking the controller action method *@
-    <form asp-route="@ViewContext.ActionDescriptor.AttributeRouteInfo?.Name" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
+    <form asp-route="@ViewContext.ActionDescriptor.AttributeRouteInfo?.Name" method="post" class="col-md-8 col-sm-10 col-12 ps-0" role="form">
         <site-validation-summary show="All">
             <b>@Localizer["Input has some issues"]:</b>
         </site-validation-summary>
-        <div class="form-group">
-            <label asp-for="Email"></label>
+        <div class="mb-3">
+            <label asp-for="Email" class="form-label"></label>
             <input asp-for="Email" required="required" class="form-control"/>
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="Gender"></label>
+        <div class="mb-3">
+            <label asp-for="Gender" class="form-label"></label>
             <select asp-for="Gender" asp-items="GenderList()" class="form-select col-md-6"></select>
             <span asp-validation-for="Gender" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="FirstName"></label>
+        <div class="mb-3">
+            <label asp-for="FirstName" class="form-label"></label>
             <input asp-for="FirstName" required="required" class="form-control"/>
             <span asp-validation-for="FirstName" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="LastName"></label>
+        <div class="mb-3">
+            <label asp-for="LastName" class="form-label"></label>
             <input asp-for="LastName" required="required" class="form-control"/>
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="PhoneNumber"></label>
+        <div class="mb-3">
+            <label asp-for="PhoneNumber" class="form-label"></label>
             <input asp-for="PhoneNumber" class="form-control"/>
             <span asp-validation-for="PhoneNumber" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="Subject"></label>
+        <div class="mb-3">
+            <label asp-for="Subject" class="form-label"></label>
             <input asp-for="Subject" required="required" class="form-control" autocomplete="off"/>
             <span asp-validation-for="Subject" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="Message"></label>
+        <div class="mb-3">
+            <label asp-for="Message" class="form-label"></label>
             <textarea asp-for="Message" class="form-control" rows="5"></textarea>
             <span asp-validation-for="Message" class="text-danger"></span>
         </div>
-        <div class="form-group">
+        <div class="mb-3">
             <div class="mt-2">
                 <img id="CaptchaImage" style="vertical-align: bottom; display: inline" src="@Url.Action(nameof(League.Controllers.Captcha.Index), nameof(League.Controllers.Captcha))@("?guid=" + Guid.NewGuid())" alt="Captcha" title=""/>
                 <label class="d-inline" onclick="javascript:if (document.images) document.images.CaptchaImage.src = '@Url.Action(nameof(League.Controllers.Captcha.Index), nameof(League.Controllers.Captcha))?new=1&amp;time=' + new Date().getTime();" style="cursor: pointer"><i class="fa fa-sync-alt fa-2x" style="margin: 0 5px 0 5px;" title="@Localizer["Reload"]"></i></label><br/>
@@ -69,13 +69,13 @@
             <label asp-for="Captcha"></label>
             <div class="input-group">
                 <input asp-for="Captcha" required="required" type="text" class="form-control" maxlength="7" autocomplete="off"/>
-                <span class="input-group-append input-group-text">
+                <span class="input-group-text">
                     <i class="fas fa-equals"></i>
                 </span>
             </div>
             <span asp-validation-for="Captcha" class="text-danger"></span>
         </div>
-        <div class="form-group">
+        <div class="mb-3">
             <button type="submit" class="btn btn-lg btn-primary col-10">@Localizer["Submit message"]</button>
         </div>
     </form>
