--- a/League/Views/Manage/Index.cshtml
+++ b/League/Views/Manage/Index.cshtml
@@ -18,12 +18,12 @@
 </div>
 <partial name="@League.Views.ViewNames.Manage._IndexMessagesPartial" model="@Model.ManageMessage" />
 <div class="mb-0 pb-1">
-    <ul class="list-inline no-gutters">
+    <ul class="list-inline g-0">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<ChangeUsernameViewModel>(nameof(ChangeUsernameViewModel.Username)))</li>
         <li class="list-inline-item col-md-7">@(User.Identity?.Name)</li>
         <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@(TenantLink.Action(nameof(Manage.ChangeUserName), nameof(Manage)))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
-    <ul class="list-inline no-gutters">
+    <ul class="list-inline g-0">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<RegisterViewModel>(nameof(RegisterViewModel.Password)))</li>
         <li class="list-inline-item col-md-7">
             @if (Model.HasPassword)
@@ -46,32 +46,32 @@
             }
         </li>
     </ul>
-    <ul class="list-inline no-gutters">
+    <ul class="list-inline g-0">
         <li class="list-inline-item text-success col-md-3">@Localizer["Personal Details"]</li>
         <li class="list-inline-item col-md-7">@Model.ApplicationUser!.CompleteName</li>
         <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditPersonalDetails), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
-    <ul class="list-inline no-gutters">
+    <ul class="list-inline g-0">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<ChangeEmailViewModel>(nameof(ChangeEmailViewModel.Email)))</li>
         <li class="list-inline-item col-md-7">@Model.ApplicationUser.Email</li>
         <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.ChangeEmail), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
-    <ul class="list-inline no-gutters">
+    <ul class="list-inline g-0">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<EditEmail2ViewModel>(nameof(EditEmail2ViewModel.Email2)))</li>
         <li class="list-inline-item col-md-7">@(Model.ApplicationUser.Email2 ?? Localizer["[Not set]"].Value)</li>
         <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditEmail2), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
-    <ul class="list-inline no-gutters">
+    <ul class="list-inline g-0">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<EditPhoneViewModel>(nameof(EditPhoneViewModel.PhoneNumber)))</li>
         <li class="list-inline-item col-md-7">@Html.Raw(string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber) ? Localizer["[Not set]"].Value : Model.ApplicationUser.PhoneNumber)</li>
         <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditPhoneNumber), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
-    <ul class="list-inline no-gutters">
+    <ul class="list-inline g-0">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<EditPhone2ViewModel>(nameof(EditPhone2ViewModel.PhoneNumber2)))</li>
         <li class="list-inline-item col-md-7">@Html.Raw(string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber2) ? Localizer["[Not set]"].Value : Model.ApplicationUser.PhoneNumber2)</li>
         <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditPhoneNumber2), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
-    <ul class="list-inline no-gutters">
+    <ul class="list-inline g-0">
         <li class="list-inline-item text-success col-md-3">@Localizer["Linked Social Logins"]</li>
         <li class="list-inline-item col-md-7">
             @{
@@ -88,7 +88,7 @@
         <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.ManageLogins), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <h4 class="text-danger">@Localizer["Danger Zone"]</h4>
-    <ul class="list-inline no-gutters">
+    <ul class="list-inline g-0">
         <li class="list-inline-item text-success col-md-3">@Localizer["Delete Account"]</li>
         <li class="list-inline-item col-md-7">@Localizer["Caution: Once the account is deleted, this is final."]</li>
         <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.DeleteAccount), nameof(Manage))" class="btn btn-sm btn-outline-danger">@Localizer["Delete"]</button></li>
