--- a/League/Views/Manage/_EditPersonalDetailsModalPartial.cshtml
+++ b/League/Views/Manage/_EditPersonalDetailsModalPartial.cshtml
@@ -23,23 +23,23 @@
         <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.EditPersonalDetails)" asp-route-tenant="@tenantUrlSegment" method="post" role="form">
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
-            <div class="form-group">
-                <label asp-for="Gender"></label>
+            <div class="mb-3">
+                <label asp-for="Gender" class="form-label"></label>
                 <select asp-for="Gender" asp-items="GenderList()" class="form-select"></select>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="FirstName"></label>
+            <div class="mb-3">
+                <label asp-for="FirstName" class="form-label"></label>
                 <input asp-for="FirstName" required="required" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="LastName"></label>
+            <div class="mb-3">
+                <label asp-for="LastName" class="form-label"></label>
                 <input asp-for="LastName" required="required" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Nickname"></label>
+            <div class="mb-3">
+                <label asp-for="Nickname" class="form-label"></label>
                 <input asp-for="Nickname" class="form-control" aria-describedby="nicknameHelpBlock" />
                 <span asp-validation-for="Nickname" class="text-danger"></span>
                 <small id="nicknameHelpBlock" class="form-text text-muted">
