--- a/League/Views/Match/EnterResult.cshtml
+++ b/League/Views/Match/EnterResult.cshtml
@@ -31,27 +31,25 @@
         <input hidden="hidden" asp-for="Hash" />
         @if (Model.IsWarning)
         {
-            <div class="row">
-                <div class="form-group col-12 col-md-6">
-                    <div class="custom-control custom-checkbox border border-warning rounded py-2">
-                        <input asp-for="OverrideWarnings" type="checkbox" class="custom-control-input">
-                        <label class="custom-control-label text-warning ml-2 mt-0" asp-for="OverrideWarnings"></label>
-                    </div>
+            <div class="p-1 col-12 col-md-6 border border-warning rounded">
+                <div class="form-check">
+                    <input asp-for="OverrideWarnings" type="checkbox" class="form-check-input">
+                    <label class="form-check-label text-warning mt-0" asp-for="OverrideWarnings"></label>
                 </div>
             </div>
         }
         <div class="row">
-            <div class="form-group col-12 col-md-6">
+            <div class="mb-3 col-12 col-md-6">
                 <label class="mt-0">@Localizer["Opponents"]</label>
-                <div class="font-weight-bold d-inline-block">@Model.Opponent!.Home</div><div class="font-weight-bold d-inline-block">&nbsp;:&nbsp;</div><div class="font-weight-bold d-inline-block">@Model.Opponent.Guest</div>
+                <div class="fw-bold d-inline-block">@Model.Opponent!.Home</div><div class="fw-bold d-inline-block">&nbsp;:&nbsp;</div><div class="fw-bold d-inline-block">@Model.Opponent.Guest</div>
             </div>
         </div>
         <div class="row">
-            <div class="form-group col-12 col-md-5">
-                <label asp-for="MatchDate" class="mt-0"></label>
+            <div class="mb-3 col-12 col-md-5">
+                <label asp-for="MatchDate" class="mt-0 form-label"></label>
                 <div class="input-group" id="picker_@nameof(Model.MatchDate)" data-target-input="nearest">
                     <input asp-for="MatchDate" type="text" autocomplete="off" class="form-control@(AddDateErr()) datepicker datetimepicker-input" data-target="#picker_@nameof(Model.MatchDate)" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
-                    <span class="input-group-append input-group-text" data-target="#picker_@nameof(Model.MatchDate)" data-toggle="datetimepicker">
+                    <span class="input-group-text" data-target="#picker_@nameof(Model.MatchDate)" data-toggle="datetimepicker">
                         <i class="far fa-calendar-alt"></i>
                     </span>
                 </div>
@@ -61,11 +59,11 @@
             </div><div class="col"></div>
         </div>
         <div class="row">
-            <div class="form-group col-12 col-md-4">
-                <label asp-for="MatchTimeFrom" class="mt-0"></label>
+            <div class="mb-3 col-12 col-md-4">
+                <label asp-for="MatchTimeFrom" class="mt-0 form-label"></label>
                 <div class="input-group" id="picker_@nameof(Model.MatchTimeFrom)" data-target-input="nearest">
                     <input asp-for="MatchTimeFrom" type="text" autofocus autocomplete="off" class="form-control@(AddDateErr()) datepicker datetimepicker-input" data-target="#picker_@nameof(Model.MatchTimeFrom)" aria-describedby="@nameof(Model.MatchTimeFrom)HelpBlock" />
-                    <span class="input-group-append input-group-text" data-target="#picker_@nameof(Model.MatchTimeFrom)" data-toggle="datetimepicker">
+                    <span class="input-group-text" data-target="#picker_@nameof(Model.MatchTimeFrom)" data-toggle="datetimepicker">
                         <i class="far fa-clock"></i>
                     </span>
                 </div>
@@ -73,11 +71,11 @@
                     @Localizer["Time format"]: @(CultureInfo.CurrentUICulture.DateTimeFormat.ShortTimePattern.ToUpperInvariant().Replace("TT", "AM/PM"))
                 </small>
             </div>
-            <div class="form-group col-12 col-md-4">
-                <label asp-for="MatchTimeTo" class="mt-0"></label>
+            <div class="mb-3 col-12 col-md-4">
+                <label asp-for="MatchTimeTo" class="mt-0 form-label"></label>
                 <div class="input-group" id="picker_@nameof(Model.MatchTimeTo)" data-target-input="nearest">
                     <input asp-for="MatchTimeTo" type="text" autocomplete="off" class="form-control@(AddDateErr()) datepicker datetimepicker-input" data-target="#picker_@nameof(Model.MatchTimeTo)" aria-describedby="@nameof(Model.MatchTimeTo)HelpBlock" />
-                    <span class="input-group-append input-group-text" data-target="#picker_@nameof(Model.MatchTimeTo)" data-toggle="datetimepicker">
+                    <span class="input-group-text" data-target="#picker_@nameof(Model.MatchTimeTo)" data-toggle="datetimepicker">
                         <i class="far fa-clock"></i>
                     </span>
                 </div>
@@ -90,22 +88,22 @@
             for (var i = 0; i < Model.Sets.Count; i++)
             {
                 <div class="row">
-                    <div class="form-group col-12">
-                        <label class="mt-0">@Localizer["Set #{0}", i + 1]</label>
+                    <div class="mb-3 col-12">
+                        <label class="mt-0 form-label">@Localizer["Set #{0}", i + 1]</label>
                         <div class="input-group">
-                            <input asp-for="@Model.Sets[i].Home" type="text" autocomplete="off" class="form-control text-left col-2 col-md-1@(AddSetErr(i))" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
-                            <span class="input-group-prepend input-group-append input-group-text">
+                            <input asp-for="@Model.Sets[i].Home" type="text" autocomplete="off" class="form-control text-start @(AddSetErr(i))" style="max-width:5em" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
+                            <span class="input-group-text">
                                 :
                             </span>
-                            <input asp-for="@Model.Sets[i].Guest" type="text" autocomplete="off" class="form-control text-right col-2 col-md-1@(AddSetErr(i))" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
+                            <input asp-for="@Model.Sets[i].Guest" type="text" autocomplete="off" class="form-control text-end @(AddSetErr(i))" style="max-width:5em" aria-describedby="@nameof(Model.MatchDate)HelpBlock" />
                         </div>
                     </div>
                 </div>
             }
         }
         <div class="row">
-            <div class="form-group col-12 col-md-8">
-                <label asp-for="Remarks" class="mt-0"></label>
+            <div class="mb-3 col-12 col-md-8">
+                <label asp-for="Remarks" class="mt-0 form-label"></label>
                 <textarea asp-for="Remarks" row="2" class="form-control" aria-describedby="@nameof(Model.Remarks)HelpBlock"></textarea>
                 <small id="@nameof(Model.Remarks)HelpBlock" class="d-block form-text text-muted">
                     @Localizer["Remarks become part of the result submission"]
@@ -118,7 +116,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="form-group col-12 mt-2">
+            <div class="mb-3 col-12 mt-2">
                 @{
                     if (Model.ReturnUrl != null && Url.IsLocalUrl(Model.ReturnUrl))
                     {
@@ -138,18 +136,16 @@
 {
     <link rel="stylesheet" href="~/lib/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.css" />
     <style type="text/css">
-        /* Start: Change Bootstrap 4 default custom checkbox color */
-        .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-            background-color: var(--warning);
-            border-color: var(--warning);
+        /* Start: Change checkbox color */
+        .border-warning > .form-check > input[type=checkbox]:checked {
+            background-color: var(--bs-warning);
         }
 
-        .custom-control-input:checked ~ .custom-control-label::before {
-            color: #fff;
-            background-color: var(--warning);
-            border-color: var(--warning);
+        .border-warning > .form-check > input[type=checkbox] {
+            border: 2px solid var(--bs-warning);
+            background-color: transparent;
         }
-        /* End: Change Bootstrap 4 default custom checkbox color */
+        /* End: Change checkbox color */
     </style>
 }
 @section scripts
