--- a/League/Views/Match/ReportSheet.cshtml
+++ b/League/Views/Match/ReportSheet.cshtml
@@ -64,7 +64,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewData["Title"]</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style type="text/css">
         @* 
             <!-- Bootstrap 5 (compared to Bootstrap 4) no longer includes custom CSS for printing -->
@@ -298,7 +298,7 @@
                 for (var i = 1; i <= numberOfSets; i++)
                 {
                     <div class="border border-top-0 p-0">
-                        <div class="row no-gutters">
+                        <div class="row g-0">
                             <div class="col-5 text-end p-0">@Repeat("O ", numOfSubstitutions)</div>
                             <div class="col-2 text-center p-0">&nbsp;&rlarr;&nbsp;</div>
                             <div class="col-5 text-start p-0">@Repeat(" O", numOfSubstitutions)</div>
