--- a/League/Views/Shared/Components/MainNavigation/Default.cshtml
+++ b/League/Views/Shared/Components/MainNavigation/Default.cshtml
@@ -1,14 +1,14 @@
 ﻿@model League.Components.MainNavigationComponentModel
 @using League.Components
 
-<ul class="navbar-nav mr-auto mt-2 mt-md-0 w-100" role="menubar">
+<ul class="navbar-nav me-auto mt-2 mt-md-0 w-100" role="menubar">
     @foreach (var node in Model.TopNavigationNodes)
     {
         // Node keys after "RightAlignSeparator" shall be aligned to the right margin of the navigation bar
         if (node.Key.Equals("RightAlignSeparator", StringComparison.InvariantCultureIgnoreCase))
         {
-            ViewData["dropdown-menu-right"] = " dropdown-menu-right"; // for dropdown in NavigationNodeChildDropdownPartial
-            <li class="ml-md-auto"></li>
+            ViewData["dropdown-menu-end"] = " dropdown-menu-end"; // for dropdown in NavigationNodeChildDropdownPartial
+            <li class="ms-md-auto"></li>
         }
 
         if (!node.ShouldShow()) { continue; }
