--- a/League/Views/Shared/_Layout.cshtml
+++ b/League/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
         <div class="my-auto order-2 order-md-1">
             <h1 class="h4 header-organization">@(TenantContext.IsDefault ? Localizer["Volleyball League"].Value : TenantContext.OrganizationContext.Name)</h1>
         </div>
-        <div class="my-auto order-1 order-md-2 text-md-right header-logo">
+        <div class="my-auto order-1 order-md-2 text-md-end header-logo">
             <a class="d-block" href="/" style="text-decoration: none">
                 <span class="d-inline-block part1">volleyball-liga</span>
                 <span class="d-inline-block part2">.de</span>
@@ -44,7 +44,7 @@
     </div>
 </header>
 
-    <nav id="nav-main" class="navbar navbar-expand-md navbar-dark rounded pl-2 site-sticky-top">
+    <nav id="nav-main" class="navbar navbar-expand-md navbar-dark rounded ps-2 site-sticky-top">
         @* bootstrap class "sticky-top" interferes with modal, that's why we use our identical "site-sticky-top" *@
         <div class="container-fluid">
             @* <a class="navbar-brand" href="#">axuno</a>*@
@@ -65,11 +65,11 @@
                 @{
                     if (TenantContext.IsDefault)
                     {
-                        <a asp-route="@RouteNames.GeneralContact" class="d-inline-block mr-4">@Localizer["Contact"]</a>
+                        <a asp-route="@RouteNames.GeneralContact" class="d-inline-block me-4">@Localizer["Contact"]</a>
                     }
                     else
                     {
-                        <a asp-route="@RouteNames.TenantContact" asp-route-tenant="@TenantContext.SiteContext.UrlSegmentValue" class="d-inline-block mr-4">@Localizer["Contact"]</a>
+                        <a asp-route="@RouteNames.TenantContact" asp-route-tenant="@TenantContext.SiteContext.UrlSegmentValue" class="d-inline-block me-4">@Localizer["Contact"]</a>
                     }
                 }
             </div>
