--- a/League/Views/Team/_ChangeVenueModalPartial.cshtml
+++ b/League/Views/Team/_ChangeVenueModalPartial.cshtml
@@ -23,12 +23,12 @@
                        asp-route-returnurl="@(TenantLink.Action(nameof(Team.MyTeam), nameof(Team)))"
                        site-authorize-resource site-resource="@(new List<VenueTeamRow>{{ new VenueTeamRow{ TeamId = Model.TeamId, VenueId = Model.VenueId.Value }}})"
                        site-requirement="@League.Authorization.VenueOperations.EditVenue"
-                       class="btn btn-primary btn-block">@Localizer["Edit current venue"]</a>
+                       class="btn btn-primary d-block w-100">@Localizer["Edit current venue"]</a>
                 }
             </div>
             <div class="mb-4">
                 <form asp-controller="@nameof(Team)" asp-action="@nameof(Team.SelectVenue)" asp-route-tenant="@tenantUrlSegment" asp-route-tid="@Model.TeamId" method="get" role="form">
-                    <button type="button" site-ajax-submit class="btn btn-primary btn-block">@Localizer["Select another venue"]</button>
+                    <button type="button" site-ajax-submit class="btn btn-primary d-block w-100">@Localizer["Select another venue"]</button>
                 </form>
             </div>
             <div>
@@ -39,7 +39,7 @@
                    asp-route-returnurl="@TenantLink.Action(nameof(Team.MyTeam), nameof(Team))"
                    site-authorize-resource site-resource="@(new List<VenueTeamRow>())"
                    site-requirement="@League.Authorization.VenueOperations.CreateVenue"
-                   class="btn btn-primary btn-block">@Localizer["Create new team venue"]</a>
+                   class="btn btn-primary d-block w-100">@Localizer["Create new team venue"]</a>
                 <div class="small text-muted">@Localizer["Please check the list of know venues, before creating a new one."]</div>
             </div>
         </div>
