--- a/League/Views/TeamApplication/Confirm.cshtml
+++ b/League/Views/TeamApplication/Confirm.cshtml
@@ -18,10 +18,10 @@
     <div class="row">
         <div class="text-success col-md-3">@Localizer["Round"]</div>
         <div class="col-md-9">
-            <div><span class="font-weight-bold d-inline-block mr-3">@Model.RoundDescription</span><span class="text-muted small">@Model.RoundTypeDescription</span></div>
+            <div><span class="fw-bold d-inline-block me-3">@Model.RoundDescription</span><span class="text-muted small">@Model.RoundTypeDescription</span></div>
         </div>
         <div class="text-success col-md-3">@(Model.SessionModel.Team!.IsNew ? Localizer["New team"] : Localizer["Existing team"])</div>
-        <div class="col-md-9 font-weight-bold">@Model.SessionModel.Team.Name</div>
+        <div class="col-md-9 fw-bold">@Model.SessionModel.Team.Name</div>
         @if (!string.IsNullOrEmpty(Model.SessionModel.Team.ClubName))
         {
             <div class="text-success col-md-3">@Localizer["Club"]</div>
@@ -31,23 +31,23 @@
         {
             // MatchTime is defined as a zoned time, NOT UTC. It is always the same, never mind DST
             <div class="text-success col-md-3">@Localizer["Home match day"]</div>
-            <div class="col-md-9 mb-2"><i class="far fa-calendar-alt"></i><span class="d-inline-block mr-2"></span>@DateTimeFormatInfo.CurrentInfo.GetDayName((DayOfWeek)Model.SessionModel.Team.MatchDayOfWeek), @(DateTime.UtcNow.Date.Add(Model.SessionModel.Team.MatchTime.Value).ToShortTimeString()) @(TimeZoneConverter.ToZonedTime(DateTime.UtcNow)!.Abbreviation)</div>
+            <div class="col-md-9 mb-2"><i class="far fa-calendar-alt"></i><span class="d-inline-block me-2"></span>@DateTimeFormatInfo.CurrentInfo.GetDayName((DayOfWeek)Model.SessionModel.Team.MatchDayOfWeek), @(DateTime.UtcNow.Date.Add(Model.SessionModel.Team.MatchTime.Value).ToShortTimeString()) @(TimeZoneConverter.ToZonedTime(DateTime.UtcNow)!.Abbreviation)</div>
         }
         <div class="text-success col-md-3">@(Model.SessionModel.Venue!.IsNew ? Localizer["New venue"] : Localizer["Existing venue"])</div>
         <div class="col-md-7 mb-2">
-            <div><i class="fas fa-map-marker-alt"></i><span class="d-inline-block mr-2"></span><span class="font-weight-bold">@Model.SessionModel.Venue.Name</span></div>
+            <div><i class="fas fa-map-marker-alt"></i><span class="d-inline-block me-2"></span><span class="fw-bold">@Model.SessionModel.Venue.Name</span></div>
             <div>@(string.Join(", ", Model.SessionModel.Venue.PostalCode, Model.SessionModel.Venue.City, Model.SessionModel.Venue.Street))</div>
         </div>
         @if (!string.IsNullOrWhiteSpace(Model.SessionModel.Venue.Direction))
         {
             <div class="text-success col-md-3">@Localizer["Directions, hints"]</div>
             <div class="col-md-7 mb-2">
-                <div><i class="fas fa-info-circle"></i><span class="d-inline-block mr-2"></span>@Model.SessionModel.Venue.Direction</div>
+                <div><i class="fas fa-info-circle"></i><span class="d-inline-block me-2"></span>@Model.SessionModel.Venue.Direction</div>
             </div>
         }
     </div>
     <div class="row">
-        <div class="form-group col-12 col-md-6">
+        <div class="mb-3 col-12 col-md-6">
             <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.Confirm)" asp-route-tenant="@tenantUrlSegment" method="post" role="form">
                 <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditVenue)" asp-route-tenant="@tenantUrlSegment" class="btn btn-secondary d-inline-block">@Localizer["Back"]</a>
                 <input type="hidden" id="Done" name="Done" value="true" />
