--- a/League/Views/TeamApplication/EditTeam.cshtml
+++ b/League/Views/TeamApplication/EditTeam.cshtml
@@ -18,19 +18,17 @@
         <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
         @if (Model.IsWarning)
         {
-            <div class="row">
-                <div class="form-group col-12 col-md-6">
-                    <div class="custom-control custom-checkbox border border-warning rounded py-2">
-                        <input asp-for="OverrideWarnings" type="checkbox" class="custom-control-input">
-                        <label class="custom-control-label text-warning ml-2 mt-0" asp-for="OverrideWarnings"></label>
-                    </div>
+            <div class="p-1 col-12 col-md-6 border border-warning rounded">
+                <div class="form-check">
+                    <input asp-for="OverrideWarnings" type="checkbox" class="form-check-input">
+                    <label class="form-check-label text-warning mt-0" asp-for="OverrideWarnings"></label>
                 </div>
             </div>
         }
         @(await Component.InvokeAsync<RoundSelector>(Model.Round))
         @(await Component.InvokeAsync<TeamEditor>(Model.Team))
         <div class="row">
-            <div class="form-group col-12 col-md-6 mt-2">
+            <div class="mb-3 col-12 col-md-6 mt-2">
                 <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.SelectTeam)" asp-route-tenant="@tenantUrlSegment" class="btn btn-secondary">@Localizer["Back"]</a>
                 <button type="submit" class="btn btn-primary">@Localizer["Continue"]</button>
             </div>
@@ -41,18 +39,16 @@
 {
     <link rel="stylesheet" href="~/lib/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.css" />
     <style type="text/css">
-        /* Start: Change Bootstrap 4 default custom checkbox color */
-        .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-            background-color: var(--warning);
-            border-color: var(--warning);
+        /* Start: Change checkbox color */
+        .border-warning > .form-check > input[type=checkbox]:checked {
+            background-color: var(--bs-warning);
         }
 
-        .custom-control-input:checked ~ .custom-control-label::before {
-            color: #fff;
-            background-color: var(--warning);
-            border-color: var(--warning);
+        .border-warning > .form-check > input[type=checkbox] {
+            border: 2px solid var(--bs-warning);
+            background-color: transparent;
         }
-        /* End: Change Bootstrap 4 default custom checkbox color */
+        /* End: Change checkbox color */
     </style>
 
 }
