--- a/League/Views/TeamApplication/SelectVenue.cshtml
+++ b/League/Views/TeamApplication/SelectVenue.cshtml
@@ -21,18 +21,18 @@
         <input asp-for="TeamId" type="hidden" />
         <input asp-for="VenueId" type="hidden" />
         <div class="row mt-3">
-            <div class="form-group col-12 col-md-6">
+            <div class="mb-3 col-12 col-md-6">
                 <input type="submit" class="btn btn-primary" value="@Localizer["Continue with selected venue"]">
             </div>
         </div>
         <div class="row">
-            <div class="form-group col-12 col-md-6">
-                <label class="mt-0">@Localizer["No venue from the list applies"]</label>
+            <div class="mb-3 col-12 col-md-6">
+                <label class="mt-0 form-label">@Localizer["No venue from the list applies"]</label>
                 <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditVenue)" asp-route-tenant="@tenantUrlSegment" asp-route-isnew="true" class="btn btn-primary">@Localizer["Create a new venue"]</a>
             </div>
         </div>
         <div class="row">
-            <div class="form-group col-12 col-md-6">
+            <div class="mb-3 col-12 col-md-6">
                 <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditTeam)" asp-route-tenant="@tenantUrlSegment" class="btn btn-secondary">@Localizer["Back"]</a>
             </div>
         </div>
